// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sizer should render correctly 1`] = `
<div
  className="jsx-4128469550 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 2`] = `
<div
  className="jsx-80534339 atm-sizer"
/>
`;

exports[`Sizer should render correctly 3`] = `
<div
  className="jsx-2144445652 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 4`] = `
<div
  className="jsx-149667720 atm-sizer"
/>
`;

exports[`Sizer should render correctly 5`] = `
<div
  className="jsx-669748006 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 6`] = `
<div
  className="jsx-519241329 atm-sizer"
/>
`;

exports[`Sizer should render correctly 7`] = `
<div
  className="jsx-3288775295 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 8`] = `
<div
  className="jsx-3232812171 atm-sizer"
/>
`;

exports[`Sizer should render correctly 9`] = `
<div
  className="jsx-1811682256 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 10`] = `
<div
  className="jsx-1532254583 atm-sizer"
/>
`;

exports[`Sizer should render correctly 11`] = `
<div
  className="jsx-1274819904 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 12`] = `
<div
  className="jsx-943542052 atm-sizer"
/>
`;

exports[`Sizer should render correctly 13`] = `
<div
  className="jsx-1029164362 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 14`] = `
<div
  className="jsx-2423523040 atm-sizer"
/>
`;

exports[`Sizer should render correctly 15`] = `
<div
  className="jsx-2091968066 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 16`] = `
<div
  className="jsx-1007644508 atm-sizer"
/>
`;

exports[`Sizer should render correctly 17`] = `
<div
  className="jsx-3161830572 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 18`] = `
<div
  className="jsx-1021100053 atm-sizer"
/>
`;

exports[`Sizer should render correctly 19`] = `
<div
  className="jsx-947755656 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 20`] = `
<div
  className="jsx-1941694298 atm-sizer"
/>
`;

exports[`Sizer should render correctly 21`] = `
<div
  className="jsx-2187212640 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 22`] = `
<div
  className="jsx-417865169 atm-sizer"
/>
`;

exports[`Sizer should render correctly 23`] = `
<div
  className="jsx-3142257614 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 24`] = `
<div
  className="jsx-1847272241 atm-sizer"
/>
`;

exports[`Sizer should render correctly 25`] = `
<div
  className="jsx-1467615421 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 26`] = `
<div
  className="jsx-2638175196 atm-sizer"
/>
`;

exports[`Sizer should render correctly 27`] = `
<div
  className="jsx-1946507393 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 28`] = `
<div
  className="jsx-4031996502 atm-sizer"
/>
`;

exports[`Sizer should render correctly 29`] = `
<div
  className="jsx-1928473014 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 30`] = `
<div
  className="jsx-1439964885 atm-sizer"
/>
`;

exports[`Sizer should render correctly 31`] = `
<div
  className="jsx-2242192358 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 32`] = `
<div
  className="jsx-1502900196 atm-sizer"
/>
`;

exports[`Sizer should render correctly 33`] = `
<div
  className="jsx-2767021874 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 34`] = `
<div
  className="jsx-2703287387 atm-sizer"
/>
`;

exports[`Sizer should render correctly 35`] = `
<div
  className="jsx-3098114233 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 36`] = `
<div
  className="jsx-463136945 atm-sizer"
/>
`;

exports[`Sizer should render correctly 37`] = `
<div
  className="jsx-3176981426 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 38`] = `
<div
  className="jsx-2967502383 atm-sizer"
/>
`;

exports[`Sizer should render correctly 39`] = `
<div
  className="jsx-928477094 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 40`] = `
<div
  className="jsx-4008332218 atm-sizer"
/>
`;

exports[`Sizer should render correctly 41`] = `
<div
  className="jsx-3355475640 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 42`] = `
<div
  className="jsx-617033867 atm-sizer"
/>
`;

exports[`Sizer should render correctly 43`] = `
<div
  className="jsx-4164475813 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 44`] = `
<div
  className="jsx-762110033 atm-sizer"
/>
`;

exports[`Sizer should render correctly 45`] = `
<div
  className="jsx-3943399088 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 46`] = `
<div
  className="jsx-1707720870 atm-sizer"
/>
`;

exports[`Sizer should render correctly 47`] = `
<div
  className="jsx-3053633838 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 48`] = `
<div
  className="jsx-328512089 atm-sizer"
/>
`;

exports[`Sizer should render correctly 49`] = `
<div
  className="jsx-3950856669 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 50`] = `
<div
  className="jsx-696008831 atm-sizer"
/>
`;

exports[`Sizer should render correctly 51`] = `
<div
  className="jsx-3606220810 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 52`] = `
<div
  className="jsx-1906921592 atm-sizer"
/>
`;

exports[`Sizer should render correctly 53`] = `
<div
  className="jsx-1742765604 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 54`] = `
<div
  className="jsx-207537957 atm-sizer"
/>
`;

exports[`Sizer should render correctly 55`] = `
<div
  className="jsx-3655525858 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 56`] = `
<div
  className="jsx-1866651341 atm-sizer"
/>
`;

exports[`Sizer should render correctly 57`] = `
<div
  className="jsx-3097819620 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 58`] = `
<div
  className="jsx-2767518305 atm-sizer"
/>
`;

exports[`Sizer should render correctly 59`] = `
<div
  className="jsx-4243452163 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 60`] = `
<div
  className="jsx-1878633344 atm-sizer"
/>
`;

exports[`Sizer should render correctly 61`] = `
<div
  className="jsx-1394759896 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 62`] = `
<div
  className="jsx-3825003298 atm-sizer"
/>
`;

exports[`Sizer should render correctly 63`] = `
<div
  className="jsx-1061008156 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 64`] = `
<div
  className="jsx-2319382276 atm-sizer"
/>
`;

exports[`Sizer should render correctly 65`] = `
<div
  className="jsx-1177441739 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 66`] = `
<div
  className="jsx-24932950 atm-sizer"
/>
`;

exports[`Sizer should render correctly 67`] = `
<div
  className="jsx-1618107916 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 68`] = `
<div
  className="jsx-1572390828 atm-sizer"
/>
`;

exports[`Sizer should render correctly 69`] = `
<div
  className="jsx-2587351288 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 70`] = `
<div
  className="jsx-256250175 atm-sizer"
/>
`;

exports[`Sizer should render correctly 71`] = `
<div
  className="jsx-3401183867 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 72`] = `
<div
  className="jsx-496966090 atm-sizer"
/>
`;

exports[`Sizer should render correctly 73`] = `
<div
  className="jsx-2236107124 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 74`] = `
<div
  className="jsx-1419062307 atm-sizer"
/>
`;

exports[`Sizer should render correctly 75`] = `
<div
  className="jsx-1526735808 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 76`] = `
<div
  className="jsx-2009514509 atm-sizer"
/>
`;

exports[`Sizer should render correctly 77`] = `
<div
  className="jsx-59431716 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 78`] = `
<div
  className="jsx-450537628 atm-sizer"
/>
`;

exports[`Sizer should render correctly 79`] = `
<div
  className="jsx-986473727 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 80`] = `
<div
  className="jsx-3091088905 atm-sizer"
/>
`;

exports[`Sizer should render correctly 81`] = `
<div
  className="jsx-2073832344 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 82`] = `
<div
  className="jsx-2425216056 atm-sizer"
/>
`;

exports[`Sizer should render correctly 83`] = `
<div
  className="jsx-1959936444 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 84`] = `
<div
  className="jsx-2837192251 atm-sizer"
/>
`;

exports[`Sizer should render correctly 85`] = `
<div
  className="jsx-763087839 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 86`] = `
<div
  className="jsx-4168946253 atm-sizer"
/>
`;

exports[`Sizer should render correctly 87`] = `
<div
  className="jsx-2572653308 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 88`] = `
<div
  className="jsx-344198418 atm-sizer"
/>
`;

exports[`Sizer should render correctly 89`] = `
<div
  className="jsx-3914475799 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 90`] = `
<div
  className="jsx-2749962816 atm-sizer"
/>
`;

exports[`Sizer should render correctly 91`] = `
<div
  className="jsx-1630099128 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 92`] = `
<div
  className="jsx-560761610 atm-sizer"
/>
`;

exports[`Sizer should render correctly 93`] = `
<div
  className="jsx-432713836 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 94`] = `
<div
  className="jsx-3709327981 atm-sizer"
/>
`;

exports[`Sizer should render correctly 95`] = `
<div
  className="jsx-2462454920 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 96`] = `
<div
  className="jsx-3978564005 atm-sizer"
/>
`;

exports[`Sizer should render correctly 97`] = `
<div
  className="jsx-502251899 atm-sizer atm-placeholder"
/>
`;

exports[`Sizer should render correctly 98`] = `
<div
  className="jsx-833598974 atm-sizer"
/>
`;

exports[`Sizer should render correctly 99`] = `
<div
  className="jsx-2088615730 atm-sizer atm-placeholder"
/>
`;
